# estudo

./: .gitignore  README.md  engenheirosdesoftware  package-lock.json  package.json
34-collectionFramework/: .notas.txt.swp
Domine Web com 15 Cursos + Projetos: Javascript React Next Vue Node HTML CSS jQuery Bootstrap Webpack Gulp MySQL/section-04/: aula35-organizacao.js  aula39-tipos.js  aula40-numbers.js
Java COMPLETO Programação Orientada a Objetos_nelio/section10/: 1q
Java COMPLETO Programação Orientada a Objetos_nelio/section5/: uri1044.java
Java COMPLETO Programação Orientada a Objetos_nelio/section6/: uri1114.java
Java COMPLETO Programação Orientada a Objetos_nelio/section7/: Application.java  Ex1.java  Product.java
SICP/: README.md
SICP/1.1/: ex3.js  notes.txt
ai/: sobreSDD.md
aipython/: estudo.py
apimarketplace/: README.md  http.txt  introducao.txt
aula/generics/: Example.java  Foo.java  Main.java  \
claude101course/: oqe.md
conceitos_fundamentais_de_genaiLLMePrompts/: modulo2.md  modulo3.md
cursoLLMs/: aula1.txt  aula2.txt  aula3.txt  aula4.txt  aula5.txt  aula6.txt  aula8.txt  regradebolso.py  tiktokens.py
estrutura-de-dados/arrays/: ExampleArrays.java  arrays.txt
hackaton (Copy)/: dev.db
hibernatejpa/: persitenciaDto.txt
java/: .Teste.java.swp  Teste.java
javalearning/: .gitignore
js/: arrays.js  produtosCategorias.js  teste.js
matematica/: anotacoes.md  anotacoes.txt
python/: estrutura.py
rag/: fluxo.md
webscraping/scrapping/: pyproject.toml
webscraping/scrapping/src/: mercado_livre.py
yoo_os/: Cargo.toml
(+145 files in other folders)
