[project]
name = "scrapping"
version = "0.1.0"
description = ""
authors = [
    {name = "guiestevam01",email = "guiestara34@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "lxml (>=6.1.1,<7.0.0)",
    "playwright (>=1.60.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
